--- a/Project3ProductionLtd/MainWindow.xaml
+++ b/Project3ProductionLtd/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Project3ProductionLtd.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="Log in" Height="350" Width="525" Background="White" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
     <Grid>
         
     </Grid>
