--- a/Project3ProductionLtd/OpretArbejdsplan.xaml
+++ b/Project3ProductionLtd/OpretArbejdsplan.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Project3ProductionLtd.OpretArbejdsplan"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Create Workplan" Height="350" Width="450" WindowStartupLocation="CenterScreen">
+        Title="Create Workplan" Height="350" Width="450">
     <Grid>
         
     </Grid>
