--- a/Project3ProductionLtd/OpretArbejdsplan.xaml
+++ b/Project3ProductionLtd/OpretArbejdsplan.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Project3ProductionLtd.OpretArbejdsplan"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Create Workplan" Height="400" Width="250">
+        Title="Create Workplan" Height="400" Width="250" WindowStartupLocation="CenterScreen">
     <Grid>
         <ComboBox Name="OrderDropdown" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="223"/>
         <ComboBox Name="ProductDropdown" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="223"/>
@@ -12,7 +12,7 @@
         <Label Name="MachineAvailableLabel" Content="Machines Available" FontSize="14" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,223,0,0" VerticalAlignment="Top"/>
         <ListBox Name="MachineAvailableListBox" HorizontalAlignment="Left" Height="78" Margin="10,257,0,0" FontSize="12" VerticalAlignment="Top" Width="193"/>
         <Button Name="SubmitBtn" Content="Submit" HorizontalAlignment="Left" Margin="10,340,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Name="CancelBtn" Content="Cancel" HorizontalAlignment="Left" Margin="97,340,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Name="CancelBtn" Content="Cancel" HorizontalAlignment="Left" Margin="97,340,0,0" VerticalAlignment="Top" Width="75" Click="CancelBtn_Click"/>
         
     </Grid>
 </Window>
