Centreret PlanlæggerMenu Vinduet i midten af skærmen

--- a/Project3ProductionLtd/PlanlæggerMenu.xaml
+++ b/Project3ProductionLtd/PlanlæggerMenu.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Project3ProductionLtd.PlanlæggerMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="PlanlæggerMenu" Height="300" Width="300">
+        Title="PlanlæggerMenu" Height="300" Width="300" WindowStartupLocation="CenterScreen">
     <Grid>
         
     </Grid>
