--- a/Project3ProductionLtd/MainWindow.xaml
+++ b/Project3ProductionLtd/MainWindow.xaml
@@ -2,8 +2,5 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Log in" Height="350" Width="525" Background="White" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
-    <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="202,116,0,0" VerticalAlignment="Top" Width="159" Click="Button_Click"/>
-
-    </Grid>
+    <Grid/>
 </Window>
