--- a/Project3ProductionLtd/MainMenu.xaml
+++ b/Project3ProductionLtd/MainMenu.xaml
@@ -1,8 +1,14 @@
 ﻿<Window x:Class="Project3ProductionLtd.MainMenu"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainMenu" Height="300" Width="300" WindowStartupLocation="CenterOwner">
+        Title="MainMenu" Height="243" Width="228" WindowStartupLocation="CenterScreen">
     <Grid>
-        
+        <Label Content="Menu" HorizontalAlignment="Left" Margin="91,15,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <Label Content="Hanne Productionsplanlægger" HorizontalAlignment="Left" Margin="25,44,0,0" VerticalAlignment="Top" FontStyle="Italic"/>
+        <Button Name="workplan" Content="Workplan" HorizontalAlignment="Left" Margin="79,89,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Name="orders" Content="Orders" HorizontalAlignment="Left" Margin="79,125,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Name="logout" Content="Log Out" HorizontalAlignment="Left" Margin="0,192,0,0" VerticalAlignment="Top" Width="75"/>
+        <Label Content="1" HorizontalAlignment="Left" Margin="166,122,0,0" VerticalAlignment="Top" Height="35" Width="27"/>
+
     </Grid>
 </Window>
