--- a/Project3ProductionLtd/MaskineVindue.xaml
+++ b/Project3ProductionLtd/MaskineVindue.xaml
@@ -15,7 +15,7 @@
         <ListBox HorizontalAlignment="Left" Height="100" Margin="162,134,0,0" VerticalAlignment="Top" Width="118"/>
         <Label Content="->" FontSize="14" HorizontalAlignment="Left" Margin="133,166,0,0" VerticalAlignment="Top" Height="32" Width="24"/>
         <Button Name="ApproveBtn" Content="Approve" HorizontalAlignment="Left" Margin="10,239,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button Name="ReturnBtn" Content="Return" HorizontalAlignment="Left" Margin="205,239,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Name="ReturnBtn" Content="Return" HorizontalAlignment="Left" Margin="205,239,0,0" VerticalAlignment="Top" Width="75" Click="ReturnBtn_Click"/>
 
     </Grid>
 </Window>
