--- a/Project3ProductionLtd/MainWindow.xaml
+++ b/Project3ProductionLtd/MainWindow.xaml
@@ -1,6 +1,14 @@
 ﻿<Window x:Class="Project3ProductionLtd.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Log in" Height="350" Width="525" Background="White" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
-    <Grid/>
+        Title="Log in" Height="380" Width="600" Background="White" Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="50" Topmost="True" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
+    <Grid>
+        <Label Content="Production LTD" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="167,39,0,0" VerticalAlignment="Top" Height="42" FontSize="24" FontWeight="Bold" Width="277" RenderTransformOrigin="0.601,0.419"/>
+        <Label Content="Login" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="225,86,0,0" VerticalAlignment="Top" Width="160" Height="46" FontSize="24" FontWeight="Bold"/>
+        <TextBox Name="Username" HorizontalAlignment="Left" Height="41" Margin="225,170,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="160" FontSize="20"/>
+        <TextBox Name="Password" HorizontalAlignment="Left" Height="38" Margin="225,233,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="160" FontSize="20"/>
+        <Label Content="Username" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="41,166,0,0" VerticalAlignment="Top" Height="45" FontSize="20" FontWeight="Bold" Width="143"/>
+        <Label Content="Password" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="41,233,0,0" VerticalAlignment="Top" Height="38" FontSize="20" FontWeight="Bold" Width="143"/>
+        <Button Content="Login" Name="Login" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="225,292,0,0" VerticalAlignment="Top" Width="160" Height="37" FontSize="20" FontWeight="Bold"/>
+    </Grid>
 </Window>
