--- a/Project3ProductionLtd/BekræftOrdre.xaml
+++ b/Project3ProductionLtd/BekræftOrdre.xaml
@@ -9,8 +9,8 @@
         <TextBlock Name="CustomerName" HorizontalAlignment="Left" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Margin="68,12,0,0"/>
         <Label Content="Deadline:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="4,24,0,0"/>
         <TextBlock Name="OrderDeadline" HorizontalAlignment="Left" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Margin="63,29,0,0"/>
-        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="76" Margin="103,223,0,0"/>
+        <Button Content="Cancel" HorizontalAlignment="Left" VerticalAlignment="Top" Width="76" Margin="103,223,0,0" Click="Button_Click"/>
         <CheckBox Name="NewDeadline" Content="Estimate new deadline" HorizontalAlignment="Left" Margin="10,199,0,0" VerticalAlignment="Top" Checked="NewDeadline_Checked" Unchecked="NewDeadline_Unchecked"/>
-
     </Grid>
 </Window>
+    
