--- a/Project3ProductionLtd/MainWindow.xaml
+++ b/Project3ProductionLtd/MainWindow.xaml
@@ -9,6 +9,6 @@
         <TextBox Name="Password" HorizontalAlignment="Left" Height="38" Margin="225,233,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="160" FontSize="20"/>
         <Label Content="Username" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="41,166,0,0" VerticalAlignment="Top" Height="45" FontSize="20" FontWeight="Bold" Width="143"/>
         <Label Content="Password" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="41,233,0,0" VerticalAlignment="Top" Height="38" FontSize="20" FontWeight="Bold" Width="143"/>
-        <Button Content="Login" Name="Login" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="225,292,0,0" VerticalAlignment="Top" Width="160" Height="37" FontSize="20" FontWeight="Bold"/>
+        <Button Content="Login" Name="Login" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="225,292,0,0" VerticalAlignment="Top" Width="160" Height="37" FontSize="20" FontWeight="Bold" Click="Login_Click"/>
     </Grid>
 </Window>
