--- a/Project3ProductionLtd/MainMenuProduktionsplanlægger.xaml
+++ b/Project3ProductionLtd/MainMenuProduktionsplanlægger.xaml
@@ -1,14 +1,15 @@
 ﻿<Window x:Class="Project3ProductionLtd.MainMenuProduktionsplanlægger"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainMenuProduktionsplanlægger" Height="243" Width="223">
+        Title="MainMenuProduktionsplanlægger" Height="245" Width="200" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Label Content="Menu" HorizontalAlignment="Left" Margin="91,15,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-        <Label Content="Hanne Productionsplanlægger" HorizontalAlignment="Left" Margin="25,44,0,0" VerticalAlignment="Top" FontStyle="Italic"/>
-        <Button x:Name="workplan" Content="Workplan" HorizontalAlignment="Left" Margin="79,89,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="orders" Content="Orders" HorizontalAlignment="Left" Margin="79,125,0,0" VerticalAlignment="Top" Width="75"/>
-        <Button x:Name="logout" Content="Log Out" HorizontalAlignment="Left" Margin="0,192,0,0" VerticalAlignment="Top" Width="75"/>
-        <Label Content="1" HorizontalAlignment="Left" Margin="166,122,0,0" VerticalAlignment="Top" Height="35" Width="27"/>
+        <Label Content="Menu" HorizontalAlignment="Left" Margin="68,13,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <Label Name="PlanlæggerLabel" Content="Planlægger" HorizontalAlignment="Left" Margin="27,42,0,0" VerticalAlignment="Top" FontStyle="Italic" Width="72"/>
+        <Label Content="Planlægger" HorizontalAlignment="Left" Margin="90,42,0,0" VerticalAlignment="Top" FontStyle="Italic"/>
+        <Button x:Name="workplan" Content="Workplan" HorizontalAlignment="Left" Margin="55,87,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="orders" Content="Orders" HorizontalAlignment="Left" Margin="55,123,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button x:Name="logout" Content="Log Out" HorizontalAlignment="Left" Margin="10,184,0,0" VerticalAlignment="Top" Width="75" Click="logout_Click"/>
+        <Label Content="1" HorizontalAlignment="Left" Margin="142,120,0,0" VerticalAlignment="Top" Height="35" Width="27"/>
 
     </Grid>
 </Window>
