--- a/Project3ProductionLtd/MainMenuSælger.xaml
+++ b/Project3ProductionLtd/MainMenuSælger.xaml
@@ -1,13 +1,14 @@
 ﻿<Window x:Class="Project3ProductionLtd.MainMenuSælger"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainMenuSælger" Height="298" Width="232">
-    <Grid>
-        <Label Content="Menu" HorizontalAlignment="Left" Margin="91,15,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-        <Label Content="username Sælger" HorizontalAlignment="Left" Margin="66,44,0,0" VerticalAlignment="Top" FontStyle="Italic"/>
+        Title="MainMenuSælger" Height="300" Width="230" WindowStartupLocation="CenterScreen">
+    <Grid Margin="0,0,-0.4,-20">
+        <Label Content="Menu" HorizontalAlignment="Left" Margin="93,17,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <Label Name="usernameLabel" Content="username" HorizontalAlignment="Left" Margin="64,46,0,0" VerticalAlignment="Top" FontStyle="Italic" Width="62"/>
+        <Label Content="Sælger" HorizontalAlignment="Left" Margin="118,46,0,0" VerticalAlignment="Top" FontStyle="Italic" Width="48"/>
         <Button Name="makeorder" Content="Make order" HorizontalAlignment="Left" Margin="79,88,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Name="addnewcustomer" Content="Add New Customer" HorizontalAlignment="Left" Margin="52,127,0,0" VerticalAlignment="Top" Width="131"/>
-        <Button Name="logout" Content="Log Out" HorizontalAlignment="Left" Margin="0,247,0,0" VerticalAlignment="Top" Width="75"/>
+        <Button Name="logout" Content="Log Out" HorizontalAlignment="Left" Margin="10,239,0,0" VerticalAlignment="Top" Width="75" Click="logout_Click"/>
         <Button Name="editcustomer" Content="Edit Customer" HorizontalAlignment="Left" Margin="67,167,0,0" VerticalAlignment="Top" Width="99"/>
         <Button Name="showcatelog" Content="Show Catelog" HorizontalAlignment="Left" Margin="67,202,0,0" VerticalAlignment="Top" Width="99"/>
 
