--- a/Project3ProductionLtd/OpretArbejdsplan.xaml
+++ b/Project3ProductionLtd/OpretArbejdsplan.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Create Workplan" Height="400" Width="250" WindowStartupLocation="CenterScreen">
     <Grid>
-        <ComboBox Name="OrderDropdown" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="223"/>
+        <ComboBox Name="OrderDropdown" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="223" SelectionChanged="OrderDropdown_SelectionChanged" DropDownOpened="OrderDropdown_DropDownOpened"/>
         <ComboBox Name="ProductDropdown" HorizontalAlignment="Left" Margin="10,37,0,0" VerticalAlignment="Top" Width="223"/>
         <Label Name="ProductLabel" Content="Product:" FontSize="14" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,80,0,0" VerticalAlignment="Top" Width="87" Height="35"/>
         <Label Name="ProductNameLabel" Content="" FontSize="14" HorizontalAlignment="Left" Margin="97,82,0,0" VerticalAlignment="Top"/>
