--- a/Project3ProductionLtd/OpretArbejdsplan.xaml
+++ b/Project3ProductionLtd/OpretArbejdsplan.xaml
@@ -9,7 +9,7 @@
         <Label Name="ProductNameLabel" Content="" FontSize="14" HorizontalAlignment="Left" Margin="75,80,0,0" VerticalAlignment="Top"/>
         <Label Name="MachineRequiredLabel" Content="Machines Required" FontSize="14" FontWeight="Bold" HorizontalAlignment="Left" Margin="10,111,0,0" VerticalAlignment="Top"/>
         <Label Name="MachineToEditLabel" Content="Select the machine you want to edit:" FontSize="10" FontStyle="Italic" HorizontalAlignment="Left" Height="23" Margin="10,135,0,0" VerticalAlignment="Top" Width="190"/>
-        <ListBox Name="MachineRequiredListBox" HorizontalAlignment="Left" Height="90" Margin="10,163,0,0" FontSize="12" VerticalAlignment="Top" Width="193"/>
+        <ListBox Name="MachineRequiredListBox" HorizontalAlignment="Left" Height="90" Margin="10,163,0,0" FontSize="12" VerticalAlignment="Top" Width="193" SelectionChanged="MachineRequiredListBox_SelectionChanged_1"/>
         <Button Name="SubmitBtn" Content="Submit" HorizontalAlignment="Left" Margin="13,263,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Name="CancelBtn" Content="Cancel" HorizontalAlignment="Left" Margin="100,263,0,0" VerticalAlignment="Top" Width="75" Click="CancelBtn_Click"/>
         
