--- a/Project3ProductionLtd/OpretOrdre.xaml
+++ b/Project3ProductionLtd/OpretOrdre.xaml
@@ -3,7 +3,12 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="OpretOrdre" Height="300" Width="300">
     <Grid>
-        <ListBox HorizontalAlignment="Left" Height="19" Margin="10,19,0,0" VerticalAlignment="Top" Width="100"/>
+        <CheckBox Name="Standardordre" Content="CheckBox" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Width="100"/>
+        <ComboBox Name="Type" HorizontalAlignment="Left" Margin="10,55,0,0" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Height" HorizontalAlignment="Left" Height="23" Margin="10,91,0,0" TextWrapping="Wrap" Text="Height" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Width" HorizontalAlignment="Left" Height="23" Margin="10,130,0,0" TextWrapping="Wrap" Text="Width" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Spacing" HorizontalAlignment="Left" Height="23" Margin="10,170,0,0" TextWrapping="Wrap" Text="Spacing" VerticalAlignment="Top" Width="120"/>
+        
 
     </Grid>
 </Window>
