--- a/Project3ProductionLtd/OpretOrdre.xaml
+++ b/Project3ProductionLtd/OpretOrdre.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Project3ProductionLtd.OpretOrdre"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="OpretOrdre" Height="300" Width="300">
+        Title="OpretOrdre" Height="349" Width="300">
     <Grid>
         <CheckBox Name="Standardordre" Content="Standard Ordre" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Width="109"/>
         <CheckBox Name="SpecielOrdre" Content="Speciel Ordre" HorizontalAlignment="Left" Margin="161,24,0,0" VerticalAlignment="Top" Width="109"/>
@@ -9,7 +9,8 @@
         <TextBox Name="Height" HorizontalAlignment="Left" Height="23" Margin="10,91,0,0" TextWrapping="Wrap" Text="Height" VerticalAlignment="Top" Width="120"/>
         <TextBox Name="Width" HorizontalAlignment="Left" Height="23" Margin="10,130,0,0" TextWrapping="Wrap" Text="Width" VerticalAlignment="Top" Width="120"/>
         <TextBox Name="Spacing" HorizontalAlignment="Left" Height="23" Margin="10,170,0,0" TextWrapping="Wrap" Text="Spacing" VerticalAlignment="Top" Width="120"/>
-        
+        <Label Name="Estimat" Content="Time Estimat" HorizontalAlignment="Left" Margin="161,206,0,0" VerticalAlignment="Top" Width="98"/>
+
 
     </Grid>
 </Window>
