--- a/Project3ProductionLtd/OpretOrdre.xaml
+++ b/Project3ProductionLtd/OpretOrdre.xaml
@@ -1,15 +1,23 @@
 ﻿<Window x:Class="Project3ProductionLtd.OpretOrdre"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="OpretOrdre" Height="349" Width="300">
+        Title="OpretOrdre" Height="418" Width="300">
     <Grid>
-        <CheckBox Name="Standardordre" Content="Standard Ordre" HorizontalAlignment="Left" Margin="10,24,0,0" VerticalAlignment="Top" Width="109"/>
-        <CheckBox Name="SpecielOrdre" Content="Speciel Ordre" HorizontalAlignment="Left" Margin="161,24,0,0" VerticalAlignment="Top" Width="109"/>
-        <ComboBox Name="Type" HorizontalAlignment="Left" Margin="10,55,0,0" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="Height" HorizontalAlignment="Left" Height="23" Margin="10,91,0,0" TextWrapping="Wrap" Text="Height" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="Width" HorizontalAlignment="Left" Height="23" Margin="10,130,0,0" TextWrapping="Wrap" Text="Width" VerticalAlignment="Top" Width="120"/>
-        <TextBox Name="Spacing" HorizontalAlignment="Left" Height="23" Margin="10,170,0,0" TextWrapping="Wrap" Text="Spacing" VerticalAlignment="Top" Width="120"/>
-        <Label Name="Estimat" Content="Time Estimat" HorizontalAlignment="Left" Margin="161,206,0,0" VerticalAlignment="Top" Width="98"/>
+        <CheckBox Name="Hastordre" Content="Hast Ordre" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Width="109"/>
+        <CheckBox Name="Standardordre" Content="Standard Ordre" HorizontalAlignment="Left" Margin="10,96,0,0" VerticalAlignment="Top" Width="109"/>
+        <CheckBox Name="SpecielOrdre" Content="Speciel Ordre" HorizontalAlignment="Left" Margin="161,93,0,0" VerticalAlignment="Top" Width="109"/>
+        <ComboBox Name="Type" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Height" HorizontalAlignment="Left" Height="23" Margin="10,160,0,0" TextWrapping="Wrap" Text="Height" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Width" HorizontalAlignment="Left" Height="23" Margin="10,199,0,0" TextWrapping="Wrap" Text="Width" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Spacing" HorizontalAlignment="Left" Height="23" Margin="10,239,0,0" TextWrapping="Wrap" Text="Spacing" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Price" HorizontalAlignment="Left" Height="23" Margin="10,277,0,0" TextWrapping="Wrap" Text="Price" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Instock" HorizontalAlignment="Left" Height="23" Margin="10,319,0,0" TextWrapping="Wrap" Text="In Stock" VerticalAlignment="Top" Width="120"/>
+        <TextBox Name="Amount" HorizontalAlignment="Left" Height="23" Margin="10,352,0,0" TextWrapping="Wrap" Text="Amount" VerticalAlignment="Top" Width="120"/>
+        <Label Name="Estimat" Content="Time Estimat:" HorizontalAlignment="Left" Margin="161,277,0,0" VerticalAlignment="Top" Width="98"/>
+        <Label Content="Opret Ordre" HorizontalAlignment="Left" Margin="99,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.342,0" FontSize="14" FontWeight="Bold"/>
+        <Label Name="Sælger" Content="Sælger" HorizontalAlignment="Left" Margin="161,39,0,0" VerticalAlignment="Top" FontStyle="Italic"/>
+        <Label Name="Username" Content="username" HorizontalAlignment="Left" Margin="81,41,0,0" VerticalAlignment="Top"/>
+
 
 
     </Grid>
