--- a/Project3ProductionLtd/OpretOrdre.xaml
+++ b/Project3ProductionLtd/OpretOrdre.xaml
@@ -20,6 +20,7 @@
         <Label Name="Username" Content="username" HorizontalAlignment="Left" Margin="81,41,0,0" VerticalAlignment="Top"/>
         <Button Name="SubmitBt" Content="Submit" HorizontalAlignment="Left" Margin="55,391,0,0" VerticalAlignment="Top" Width="75"/>
         <Button Name="CancelBt" Content="Cancel" HorizontalAlignment="Left" Margin="161,391,0,0" VerticalAlignment="Top" Width="75" Click="CancelBt_Click"/>
+        <Button Name="AddProduct" Content="Add Product" HorizontalAlignment="Left" Margin="161,355,0,0" VerticalAlignment="Top" Width="75" Click="AddProduct_Click"/>
 
 
 
