--- a/Project3ProductionLtd/BekræftOrdreWindow.xaml
+++ b/Project3ProductionLtd/BekræftOrdreWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Project3ProductionLtd.BekræftOrdreWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="BekræftOrdreWindow" Height="328.066" Width="300">
+        Title="BekræftOrdreWindow" Height="328.066" Width="300" WindowStartupLocation="CenterScreen">
     <Grid Height="318" VerticalAlignment="Top" Margin="0,0,0,-20">
         <Button Name="ConfirmOrder" Content="Confirm" HorizontalAlignment="Left" Margin="199,268,0,0" VerticalAlignment="Top" Width="75" Click="ConfirmOrder_Click"/>
         <Label Content="Customer:" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="4,52,0,0"/>
