--- a/Project3ProductionLtd/MainMenuProduktionsplanlægger.xaml
+++ b/Project3ProductionLtd/MainMenuProduktionsplanlægger.xaml
@@ -4,8 +4,8 @@
         Title="MainMenuProduktionsplanlægger" Height="245" Width="200" WindowStartupLocation="CenterScreen">
     <Grid>
         <Label Content="Menu" HorizontalAlignment="Left" Margin="68,13,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-        <Label Name="PlanlæggerLabel" Content="Planlægger" HorizontalAlignment="Left" Margin="27,42,0,0" VerticalAlignment="Top" FontStyle="Italic" Width="72"/>
-        <Label Content="Planlægger" HorizontalAlignment="Left" Margin="90,42,0,0" VerticalAlignment="Top" FontStyle="Italic"/>
+        <Label Name="PlanlæggerLabel" Content="" HorizontalAlignment="Left" Margin="40,42,0,0" VerticalAlignment="Top" FontStyle="Italic" Width="72"/>
+        <Label Content="Planlægger" HorizontalAlignment="Left" Margin="75,42,0,0" VerticalAlignment="Top" FontStyle="Italic"/>
         <Button x:Name="workplan" Content="Create Workplan" HorizontalAlignment="Left" Margin="40,83,0,0" VerticalAlignment="Top" Width="104" Click="workplan_Click"/>
         <Button x:Name="orders" Content="Confirm Orders" HorizontalAlignment="Left" Margin="40,121,0,0" VerticalAlignment="Top" Width="104" Click="orders_Click"/>
         <Button x:Name="logout" Content="Log Out" HorizontalAlignment="Left" Margin="10,183,0,0" VerticalAlignment="Top" Width="75" Click="logout_Click"/>
