--- a/Project3ProductionLtd/MainWindow.xaml
+++ b/Project3ProductionLtd/MainWindow.xaml
@@ -6,12 +6,13 @@
         <Label Content="Production LTD" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="167,39,0,0" VerticalAlignment="Top" Height="42" FontSize="24" FontWeight="Bold" Width="277" RenderTransformOrigin="0.601,0.419"/>
         <Label Content="Login" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="225,86,0,0" VerticalAlignment="Top" Width="160" Height="46" FontSize="24" FontWeight="Bold"/>
         <TextBox Name="Username" HorizontalAlignment="Left" Height="41" Margin="225,170,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="160" FontSize="20"/>
-        <TextBox Name="Password" HorizontalAlignment="Left" Height="38" Margin="225,233,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="160" FontSize="20"/>
+        <PasswordBox Name="Password" HorizontalAlignment="Left" Margin="225,233,0,0" VerticalAlignment="Top" Width="160" Height="38" FontSize="20"/>
         <Label Content="Username" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="41,166,0,0" VerticalAlignment="Top" Height="45" FontSize="20" FontWeight="Bold" Width="143"/>
         <Label Content="Password" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="41,233,0,0" VerticalAlignment="Top" Height="38" FontSize="20" FontWeight="Bold" Width="143"/>
         <Button Content="Login" Name="Login" HorizontalContentAlignment="Center" HorizontalAlignment="Left" Margin="225,292,0,0" VerticalAlignment="Top" Width="160" Height="37" FontSize="20" FontWeight="Bold" Click="Login_Click"/>
         <Button Name="SælgerBtn" Content="MenuSælger" FontSize="12"  HorizontalAlignment="Left" Margin="24,25,0,0" VerticalAlignment="Top" Width="78" Height="45" Click="SælgerBtn_Click"/>
         <Button Name="ArbejderBtn" Content="ArbejderMenu" FontSize="12"  HorizontalAlignment="Left" Margin="68,87,0,0" VerticalAlignment="Top" Width="78" Height="45" Click="ArbejderBtn_Click"/>
         <Button Name="PlanlæggerBtn" Content="PlanlæggerMenu" FontSize="12"  HorizontalAlignment="Left" Margin="125,25,0,0" VerticalAlignment="Top" Width="78" Height="45" Click="PlanlæggerBtn_Click"/>
+        
     </Grid>
 </Window>
