--- a/Project3ProductionLtd/OpretKunde.xaml
+++ b/Project3ProductionLtd/OpretKunde.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Project3ProductionLtd.OpretKunde"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="OpretKunde" Height="300" Width="300">
+        Title="OpretKunde" Height="300" Width="300" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button Name="Create" Content="Create" HorizontalAlignment="Left" Margin="30,230,0,0" VerticalAlignment="Top" Width="75" Click="Create_Click"/>
         <Button Name="Cancel" Content="Cancel" HorizontalAlignment="Left" Margin="150,230,0,0" VerticalAlignment="Top" Width="75" Click="Cancel_Click"/>
